# scene_graph_interfaces

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
msg/: DetectedObject.msg  GraphObject.msg  ObjectAttribute.msg  ObjectDescription.msg  ObjectDescriptions.msg  ObjectInfo.msg  ObjectPart.msg  ObjectSceneGraph.msg  ObjectSegment.msg  ObjectSegmentList.msg  ObjectSpatialContext.msg
scene_graph_interfaces/: __init__.py  messages.py
scene_graph_interfaces/visual_interface/: __init__.py  visual_interface.py
scene_graph_interfaces/vlm_service/: __init__.py  vlm_service_node.py
srv/: VLMInference.srv
