<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scene_graph_interfaces</name>
  <version>0.0.1</version>
  <description>ROS2 interface definitions and Python utilities for scene graph processing</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Message generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Python/ROS2 runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
