<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scene_graph_interfaces</name>
  <version>0.0.1</version>
  <description>ROS2 interface definitions for scene graph processing</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>TODO</license> <!--Apache License 2.0?-->

  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--<buildtool_depend>ament_python</buildtool_depend>-->

  <!-- Message generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Message dependencies -->
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
